--- a/baitap2.html
+++ b/baitap2.html
@@ -8,7 +8,7 @@
     <!-- Link icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <!-- Link css -->
-    <link rel="stylesheet" href="./css/baitap2.css">
+    <link rel="stylesheet" href="baitap2.css">
 </head>
 
 <body>
@@ -88,7 +88,7 @@
 
         function renderComment() {
             let result = "";
-            // localStorage.getItem();
+            let arrLocalStorage = localStorage.setItem("result",JSON.stringify(result));
             for (let z = 0; z < comments.length; z++) {
 
                 result += `<ul>
